test: TestCode 작성